# recipec

./: .gitignore  README.md  README.rst  recipes_and_ingredients.dot  setup.cfg  setup.py
recipec/: __init__.py  code_gen.py  console.py  mm_classes.py
recipec/grammar/: Base.tx  Config.tx  Ingredient.tx  Plan.tx  Recipe.tx
recipec/metamodel/: metamodel.py
recipec/template/: plan.template
tests/: test_lang.py
tests/demos/: bananen-schoko-muffins.recipe  schinken-bananen.recipe  teheraner-reis-schuessel.recipe
tests/demos/config/: settings.config
tests/demos/ingredients/: backpulver.ingredient  fleisch.ingredient  gemuese.ingredient  gewuertze.ingredient  kaese.ingredient  mehl.ingredient  obst.ingredient  oel.ingredient  reis.ingredient  schokolade.ingredient  zucker.ingredient
tests/demos/plan/: bananentag.plan
