[metadata]
name = recipec
version = 1.0.0

[options]
packages = find:
install_requires =
    textX

[options.package_data]
dsl = *.tx
tmpl = *.template

[options.entry_points]
textx_languages =
    config_lang = recipec:config_lang 
    ingredient_lang = recipec:ingredient_lang
    recipe_lang = recipec:recipe_lang
    plan_lang = recipec:plan_lang
textx_generators =
    plan_gen = recipec.code_gen:plan_generator
